Changes to merge.

--- a/TecAirWebApp/app1/register-login/register-login.template.html
+++ b/TecAirWebApp/app1/register-login/register-login.template.html
@@ -1,65 +1,63 @@
-<div class="global-wrap">
-
-        <div class="full-page">
-            <div class="bg-holder full">
-                <div class="bg-mask"></div>
-                <div class="bg-img" style="background-image:url(img/register.jpeg);"></div>
-                <div class="bg-holder-content full text-white">
-                    <a class="logo-holder" href="index.html">
-                        <img src="img/logo-white.png" title="TEC Airlines" />
-                    </a>
-                    <div class="full-center">
-                        <div class="container">
-                            <div class="row row-wrap" data-gutter="60">
-                                <div class="col-md-4">
-                                    <div class="visible-lg">
-                                        <h3 class="mb15">Bienvenido a <br> TEC-Airlines</h3>
-                                        <p>Nuestra aerolínea busca ser la número uno para los estudiantes que 
-                                        buscan una opción para viajar al extranjero.
-                                        Si eres estudiante puedes registrarte y disfrutar de todos los beneficios.</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <h3 class="mb15">Login</h3>
-                                    <form>
-                                        <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-user input-icon input-icon-show"></i>
-                                            <label>Correo eléctronico</label>
-                                            <input class="form-control" placeholder="ejemplo usuario@tec-airlines.com" type="text" />
-                                        </div>
-                                        <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-lock input-icon input-icon-show"></i>
-                                            <label>Contraseña</label>
-                                            <input class="form-control" type="password" placeholder="mi clave secreta" />
-                                        </div>
-                                        <input class="btn btn-primary" type="submit" value="Ingresar" />
-                                    </form>
-                                </div>
-                                <div class="col-md-4">
-                                    <h3 class="mb15">Eres nuevo?</h3>
-                                    <form>
-                                        <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-user input-icon input-icon-show"></i>
-                                            <label>Nombre Completo</label>
-                                            <input class="form-control" placeholder="ejemplo Juan Pérez" type="text" />
-                                        </div>
-                                        <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-envelope input-icon input-icon-show"></i>
-                                            <label>Correo electrónico</label>
-                                            <input class="form-control" placeholder="ejemplo usuario@tec-airlines.com" type="text" />
-                                        </div>
-                                        <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-lock input-icon input-icon-show"></i>
-                                            <label>Contraseña</label>
-                                            <input class="form-control" type="password" placeholder="La clave secreta de Juan" />
-                                        </div>
-                                        <input class="btn btn-primary" type="submit" value="Registrarse en TEC-Airlines" />
-                                    </form>
-                                </div>
+<div class="full-page">
+    <div class="bg-holder full">
+        <div class="bg-mask"></div>
+        <div class="bg-img" style="background-image:url(img/register.jpeg);"></div>
+        <div class="bg-holder-content full text-white">
+            <a class="logo-holder" href="index.html">
+                <img src="img/logo.png" title="TEC Airlines" />
+            </a>
+            <div class="full-center">
+                <div class="container">
+                    <div class="row row-wrap" data-gutter="60">
+                        <div class="col-md-4">
+                            <div class="visible-lg">
+                                <h3 class="mb15">Bienvenido a <br> TEC-Airlines</h3>
+                                <p>Nuestra aerolínea busca ser la número uno para los estudiantes que 
+                                buscan una opción para viajar al extranjero.
+                                Si eres estudiante puedes registrarte y disfrutar de todos los beneficios.</p>
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <h3 class="mb15">Login</h3>
+                            <form>
+                                <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-user input-icon input-icon-show"></i>
+                                    <label>Correo eléctronico</label>
+                                    <input class="form-control" placeholder="ejemplo usuario@tec-airlines.com" type="text" />
+                                </div>
+                                <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-lock input-icon input-icon-show"></i>
+                                    <label>Contraseña</label>
+                                    <input class="form-control" type="password" placeholder="mi clave secreta" />
+                                </div>
+                                <input class="btn btn-primary" type="submit" value="Ingresar" />
+                            </form>
+                        </div>
+                        <div class="col-md-4">
+                            <h3 class="mb15">Eres nuevo?</h3>
+                            <form>
+                                <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-user input-icon input-icon-show"></i>
+                                    <label>Nombre Completo</label>
+                                    <input class="form-control" placeholder="ejemplo Juan Pérez" type="text" />
+                                </div>
+                                <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-envelope input-icon input-icon-show"></i>
+                                    <label>Correo electrónico</label>
+                                    <input class="form-control" placeholder="ejemplo usuario@tec-airlines.com" type="text" />
+                                </div>
+                                <div class="form-group form-group-ghost form-group-icon-left"><i class="fa fa-lock input-icon input-icon-show"></i>
+                                    <label>Contraseña</label>
+                                    <input class="form-control" type="password" placeholder="La clave secreta de Juan" />
+                                </div>
+                                <input class="btn btn-primary" type="submit" value="Registrarse en TEC-Airlines" />
+                            </form>
+                        </div>
                     </div>
-                    <ul class="footer-links">
-                        <li><a href="#">About</a>
-                        </li>
-                        <li><a href="#">Help</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
+            <ul class="footer-links">
+                <li><a href="#">About</a>
+                </li>
+                <li><a href="#">Help</a>
+                </li>
+            </ul>
         </div>
+    </div>
+</div>
